# nc-ad-facemask

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/nhancv/facemask/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/: Mask.3ds  Mask.blend  Mask.fbx  Mask.mtl  nhancv1.gltf
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/nhancv/facemask/: AutoFitTextureView.java  CameraActivity.java  CameraFragment.java  FaceLandmarkListener.java  GLToolbox.java  HelloEffects.java  MainActivity.java  MainApplication.java  MatConversion.java  OnGetImageListener.java  (+2 more)
app/src/main/java/com/tracking/: CameraOverlapFragment.java  FaceOverlapFragment.java  FaceTrackerActivity.java  FixedAspectRatioFrameLayout.java
app/src/main/java/zeusees/tracking/: Face.java  FaceTracking.java  STUtils.java
app/src/main/res/drawable/: circle.xml  clickable.xml
app/src/main/res/drawable-v21/: clickable.xml
app/src/main/res/layout/: activity_camera.xml  activity_m3dlite.xml  activity_main.xml  activity_multitracker.xml  fragment_camera.xml  fragment_camera_overlap.xml  main.xml
app/src/main/res/layout-land/: fragment_camera.xml
app/src/main/res/menu/: options_menu.xml
app/src/main/res/raw/: glasses_obj
app/src/main/res/values/: strings.xml  styles.xml
dlib/: build.gradle  local.properties
dlib/gradle/wrapper/: gradle-wrapper.properties
docs/: design.psd  dog.psd
docs/mask_design/: sample_pic.psd
engine/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
(+97 files in other folders)
